[package]
name = "rust_command_sample"
description = "Rust std::process::Command sample."
version = "0.0.1"
authors = ["Stanley Wintergreen <kepocnhh@gmail.com>"]
readme = "README.md"
repository = "https://github.com/kepocnhh/RustCommandSample"
publish = false
edition = "2021"
rust-version = "1.66.0"
